# kicks

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  cluster.py  docker-compose.yml  finetune_bigvgan.py  main.py  pyproject.toml
kicks/: _cluster_cmd.py  _strip_cmd.py  cli.py  cluster.py  config.py  dataset.py  finetune.py  loss.py  model.py  pca_analysis.py  server.py  train.py  tui.py  vocoder.py
web/: package-lock.json  package.json
web/app/: page.tsx
web/app/api/cluster-avg/: route.ts
web/app/api/cluster-data/: route.ts
web/app/api/play/: route.ts
web/app/cluster/: page.tsx
web/app/math/: page.tsx
web/components/cluster/: cluster-profile.tsx  color-mode-selector.tsx  correlation-heatmap.tsx  descriptor-distribution.tsx  eda-section.tsx  pc-card.tsx  sample-inspector.tsx  scatter-plot-3d.tsx  scatter-plot.tsx  variance-bar.tsx
web/components/synth/: sequencer.tsx  spectrogram-vis.tsx  wave-background.tsx  waveform-viewer.tsx  waveform-vis.tsx
web/components/ui/: latex.tsx
web/hooks/: use-audio-context.ts  use-audio.ts  use-cluster-data.ts  use-sequencer.ts  use-synth.ts
web/lib/: colors.ts  styles.ts
web/types/: cluster.ts  synth.ts
