[project]
name = "kicks"
version = "0.1.0"
description = "VAE-powered kick drum synthesizer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "soundfile>=0.12",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "rich",
    "bigvgan>=2.4.1",
    "pyloudnorm",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "typer>=0.15.0",
    "textual>=8.0.2",
]

[project.optional-dependencies]
finetune = [
    "huggingface_hub>=0.36.2",
]

[project.scripts]
kicks = "kicks.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
